--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -36,12 +36,15 @@ h1 {
 }
 h2 {
   font-size: 1.875rem;
+  color: #B12544;
 }
 h3 {
   font-size: 1.5rem;
+  color: #B12544;
 }
 h4 {
   font-size: 1.125rem;
+  color: #B12544;
 }
 h1, h2, h3, h4 {
   margin-top: 1.25rem;
